fixed the responsiveness of the emails and the gitdiv and hidden the x-overflow

--- a/app/static/app/home.css
+++ b/app/static/app/home.css
@@ -148,6 +148,7 @@ a {
   /* height: 162vh; */
   background-color: #111827;
   margin-bottom: 60px;
+  overflow-x: hidden;
 }
 .h1Aboutus {
   font-size: 50px;
@@ -562,8 +563,12 @@ html {
   text-align: center;
   padding: 7px;
   background-color: #f8f9fa;
+  width: 100vw;
   /* margin-top: 73px; */
 }
 .crew {
   margin-bottom: 20px;
+}
+.mails{
+  word-break: break-word;
 }
